--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,20 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-cassandra</artifactId>
+		</dependency>
+		<dependency>
+    <groupId>io.stargate.grpc</groupId>
+    <artifactId>grpc-proto</artifactId>
+    <version>1.0.41</version>
+  </dependency>
+  <dependency>
+    <groupId>io.grpc</groupId>
+    <artifactId>grpc-netty-shaded</artifactId>
+    <version>1.41.0</version>
+  </dependency>
 	</dependencies>
 
 	<build>
